feat(post): 添加 intercepting-routes 示例（取消静态导出） :sparkles:

--- a/content/posts/nextjs/red-book.mdx
+++ b/content/posts/nextjs/red-book.mdx
@@ -170,6 +170,9 @@ export default function Page() {
 }
 ```
 
+[点击查看示例🍓](/examples/intercepting-routes)
+
+
 ### 7. 补充
 
 Next.js 官方文档提供了关于 [Intercepting Routes](https://link.juejin.cn?target=https%3A%2F%2Fnextjs.org%2Fdocs%2Fapp%2Fbuilding-your-application%2Frouting%2Fintercepting-routes 'https://nextjs.org/docs/app/building-your-application/routing/intercepting-routes') 的详细信息，这允许我们在当前布局中加载应用程序其他部分的路由。这种路由模式在想要在不切换用户上下文的情况下显示路由内容时非常有用。例如，点击内容流中的照片时，可以在模态窗口中显示照片，而不需要跳转到新页面。
