feat(post): 添加文章 :sparkles:

--- a/content/posts/solution/setup-blog-with-fumadocs.mdx
+++ b/content/posts/solution/setup-blog-with-fumadocs.mdx
@@ -389,16 +389,22 @@ seriesPart: 1
 ```
 
 </Step>
+
+<Step>
+
+### 静态部署
+
+刚开始搭建博客时，我的需求一个支持静态部署的站点，但是随着对 Next.js 全栈框架的探索，我的站点可能会演示一些 Next.js 框架独有的特性，并且必须在服务端运行，所以无法静态部署，关于静态部署部分，你可以查看 [Next.js 项目静态部署到 GitHub Pages](/posts/deploy-nextjs-to-github-pages)。
+</Step>
+
 </Steps>
 
 ## 后续计划
 
 本博客的开发是基于我个人的需求和正在构建的产品，以下是我接下来的计划：
 
-	•	添加订阅功能（但静态站点如何实现？）
-	•	标签功能
-	•	组件样式支持自定义覆盖
-	•	封装为可克隆模板
-	•	最大的问题在于，一旦你克隆模板并开始修改，后续就无法方便地更新。所以我考虑将其改为 monorepo 架构，以便以开源包的形式持续更新。
-
-你还想添加什么功能？欢迎在 Twitter 上联系我并关注我获取更新。
+- 添加订阅功能（但静态站点如何实现？）
+- 标签功能
+- 组件样式支持自定义覆盖
+- 封装为可克隆模板
+- 最大的问题在于，一旦你克隆模板并开始修改，后续就无法方便地更新。所以我考虑将其改为 monorepo 架构，以便以开源包的形式持续更新。
