docs(about): rEADME.md & About ME :memo:

--- a/src/app/(home)/(mdx)/about/page.mdx
+++ b/src/app/(home)/(mdx)/about/page.mdx
@@ -1,5 +1,17 @@
 import VanillaMdx from "@/fumadocs/mdx/vanilla"
+import { RedactedText } from "@/components/redacted"
 
 <VanillaMdx title="About" toc={toc}>
-Hello! I am liaoyi, a ...
+
+
+## 关于
+👋 Hi，我是 Liaoyi， 一名 Web 开发者，终身学习者， 喜欢：冥想🧘‍♀️、摄影（自然风景）🏞️， 徒步🚶🏻‍♂️和骑行🚴🏻。
+
+
+## 我最近在做什么
+
+- 学习 [Vue](https://vueuse.org/) 3.5 的响应式的源码
+- ~~重新设计~~ 重写我的个人博客
+- <p style={{ position: 'relative'}}>我正在建造 <RedactedText /></p>
+
 </VanillaMdx>
