feat(markdown): 新增预览插件 :sparkles:

--- a/content/posts/solution/mdx-plugins.mdx
+++ b/content/posts/solution/mdx-plugins.mdx
@@ -5,6 +5,15 @@ date: 2025-05-18
 author: liaoyi
 tags: [Markdown, component]
 ---
+import Opacity from '@/components/animations/opacity.tsx'
+
+## CodeDisplay
+
+ <CodeDisplay component={<Opacity />}>
+  <include lang="tsx" meta={{title: "opacity.tsx"}}>
+   ../../../src/components/animations/opacity.tsx
+  </ include>
+</CodeDisplay>
 
 ## XEmbed
 
